# Qt6_Industrial_AI_Vision_Tutorial

Chapter1/ScrewDetector/: Main.qml  logo.rc  main.cpp
Chapter2/Demo_2_1_Variables/: CMakeLists.txt  main.cpp
Chapter2/Demo_2_2_Functions/: CMakeLists.txt  main.cpp
Chapter2/Demo_2_3_LoopsAndContainers/: CMakeLists.txt  main.cpp
Chapter2/Demo_2_4_Classes/: CMakeLists.txt  main.cpp  simplecounter.cpp  simplecounter.h
Chapter2/Demo_2_5_SignalsAndSlots/: CMakeLists.txt  main.cpp  manager.cpp  manager.h  worker.cpp  worker.h
Chapter3/ScrewDetector/: CMakeLists.txt  Main.qml
Chapter4/ScrewDetector/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp
Chapter5/ScrewDetector/: CMakeLists.txt  backend.cpp  backend.h  main.cpp
Chapter6/: Main.qml  backend.cpp  imageprovider.cpp
Chapter7/: export.py  train.py
Chapter8/: backend.cpp  backend.h  imageprovider.h
Chapter9/ScrewDetector/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  cameraworker.cpp  cameraworker.h
